Removed hardcoded URL

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">get started</h2>
-								<form method="post" action="http://127.0.0.1:8080/myaction">
+								<form method="post" action="/myaction">
 									<div class="fields">
 										<div class="field">
 											<label for="name">First Name*</label>
