clean up server.js

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 							<div class="inner">
 								<h1>Rain Alert</h1>
 								<p>A customizable option for real-time inclement weather updates. <!--<a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.--> </p> 
+								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.--> </p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">about us</a></li>
+								<li><a href="#intro">about</a></li>
 								<li><a href="#contact">get started</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -43,10 +43,10 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">about us</h2>
+								<h2 class="major">about</h2>
 								<span class="image main"><img src="cover.jpg" alt="" /></span>
 								<p>RainAlert is an application that sends you text messages when the weather is bad in your
-									location. You can input what temperatures are too cold and too hot and if you want to be 
+									location. You can input what temperatures are too cold and too hot and if you want to be
 									alerted when the weather conditions are raining or snowing.</p>
 							</article>
 
@@ -88,7 +88,7 @@
 										<div>
 											<label for="required">*Indicates required field.</label>
 										</div>
-									
+
 									</div>
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="primary" /></li>
