fixed issues reading from form

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">about</a></li>
+								<li><a href="#intro">about us</a></li>
 								<li><a href="#contact">get started</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -43,7 +43,7 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">about</h2>
+								<h2 class="major">about us</h2>
 								<span class="image main"><img src="cover.jpg" alt="" /></span>
 								<p>RainAlert is an application that sends you text messages when the weather is bad in your
 									location. You can input what temperatures are too cold and too hot and if you want to be
